--- a/.gitignore
+++ b/.gitignore
@@ -153,6 +153,7 @@ dmypy.json
 cython_debug/
 
 stats.json
+stats_local.json
 
 # PyCharm
 #  JetBrains specific template is maintained in a separate JetBrains.gitignore that can
